# coingecko-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: general.yml
src/: client.rs  lib.rs  params.rs
src/response/: asset_platforms.rs  coins.rs  common.rs  companies.rs  derivatives.rs  events.rs  exchange_rates.rs  exchanges.rs  finance.rs  global.rs  indexes.rs  mod.rs  ping.rs  simple.rs  trending.rs
