[package]
name = "coingecko-rs"
version = "0.1.2"
authors = ["ecklf <ecklf@icloud.com>"]
description = "Rust library for the CoinGecko API."
documentation = "https://docs.rs/coingecko"
homepage = "https://github.com/ecklf/coingecko-rs"
keywords = ["coingecko", "api"]
edition = "2018"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
reqwest = { version = "0.11.3", features = ["json"] }
anyhow = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"

[dev-dependencies]
tokio-test = "0.4.2"
