[package]
name = "coingecko"
version = "1.1.2"
authors = ["ecklf <ecklf@icloud.com>"]
description = "Rust library for the CoinGecko V3 API"
documentation = "https://docs.rs/coingecko"
repository = "https://github.com/ecklf/coingecko-rs"
keywords = ["coingecko", "api", "cryptocurrency"]
edition = "2021"
readme = "README.md"
license = "MIT"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = "0.4.39"

[dev-dependencies]
tokio-test = "0.4.3"
